--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "uuid": "^8.3.2"
   },
-  "exports" : {
+  "exports": {
     "./cjs/*": "./cjs/*.js",
     "./umd/*": "./umd/*.js"
   },
